--- a/frontend/src/Navbar.css
+++ b/frontend/src/Navbar.css
@@ -1,4 +1,44 @@
-.navbar {
+*{
+  box-sizing: border-box;
+}
+body {
+  margin: 0;
+}
+.nav {
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+.site-title {
+  font-size: 1.5rem;
+}
+.nav ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display:flex;
+  gap: 1rem;
+}
+.nav a {
+  color: inherit;
+  text-decoration: none;
+  height: 100%; 
+  display: flex;
+  align-items: center;
+  padding: .25rem;
+
+}
+.nav li:active{
+  background-color: #333;
+
+}
+.nav li:hover {
+  background-color: #333;
+}
+/* .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
   display: flex;
@@ -143,4 +183,4 @@
   button {
     display: none;
   }
-}
+} */
